# single_instance

./: CMakeLists.txt  LICENSE  README.md
src/: single_instance_guard.cpp  single_instance_guard.h  test_driver.cpp  test_target.cpp
